--- a/src/components/Item.module.css
+++ b/src/components/Item.module.css
@@ -1,4 +1,5 @@
 @import '../util/colors.css';
+
 .productItemImage{
     width: 312px;
     height: 312px;
@@ -12,6 +13,7 @@
     background-color: var(--mainThemeColor);
     color: white;
     box-shadow: 1px 1px 10px 1px grey;
+   
 }
 .productName{
 
@@ -25,3 +27,41 @@
     font-size: 14px;
     margin-left: 5px;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .productCartButton{
+       
+        margin-right: 190px;
+    }
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    .productCartButton{
+       
+        margin-right: 190px;
+    }
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .productCartButton{
+       
+        margin-right: 10px;
+    }
+  } 
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+   
+    .productCartButton{
+       
+        margin-right: -20px;
+    }
+  } 
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    
+  }
