--- a/src/components/Cart.module.css
+++ b/src/components/Cart.module.css
@@ -1,4 +1,4 @@
-
+/* 
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -24,13 +24,13 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     .amountContainer {
-        margin-right: 210px;
+        margin-right: 330px;
     }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1600px) {
     .amountContainer {
-        margin-right: 330px;
+        margin-right: 850px;
     }
 }
