--- a/src/components/modules/product/ProductDetails.module.css
+++ b/src/components/modules/product/ProductDetails.module.css
@@ -36,3 +36,9 @@
     border-left: none;
     border-right: none;
 }
+.productPrePrice{
+    text-decoration: line-through;
+    color:#9A9CAA ;
+    font-size: 16px;
+    margin-left: 5px;
+}
