--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -22,6 +22,11 @@
     background-color: var(--mainThemeColor);;
 }
 
+.linkTextDecoration {
+  text-decoration: none;
+  color: inherit;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .topBarText{ margin-left: 20px;} 
